--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
             color: white
         }
 
+        @media (max-width: 425px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+            #myVideo {
+                display: none;
+            }
+            #logo-banner {
+                width: 100%;
+                height: 50vh;
+                background-image: url('img/poster.png');
+                background-size: cover;
+                background-position: center;
+            }
+        }
 
         .no-gutters {
             margin-right: 0;
@@ -315,6 +330,9 @@
         <video class="lazy" autoplay muted loop id="myVideo" data-poster="img/poster.png">
             <source data-src="img/For Web-1.webm" type="video/mp4">
         </video>
+        
+        <!-- For mobile -->
+        <div id="logo-banner"></div>
     </div>
 
 
@@ -353,9 +371,8 @@
                     </div>
                 </div>
                 <div class="card-body bg-primary">
-                    <h1>Dr. Akina is a graduate of :</h1>
-                    <p class="lead">Kamehameha Schools, Northwestern University (B.A.)</p>
-                    <p class="lead">University of Hawaii (M.A. and Ph.D.)</p>
+                    <h1>A graduate of :</h1>
+                    <p class="lead">Kamehameha Schools, Northwestern University (B.A.) and University of Hawaii (M.A. and Ph.D.)</p>
                 </div>
             </div>
             <div class="card bg-secondary border-0 swiper-slide">
@@ -394,36 +411,42 @@
         </div>
     </div>
     <div class="d-flex flex-column">
-        <footer id="sticky-footer" class="py-4 bg-dark text-white-50 ">
+        <footer id="sticky-footer" class="py-4 bg-black text-white-50 ">
             <div class="container">
                 <div class="row mt-4">
-                    <div class="col-lg-2">
-                        <ul class=" list-unstyled font-weight-bold">
-                            <a href="" style="color: white;">
+                    <div class="col-lg-3 col-md-3">
+                        <ul class="list-unstyled font-weight-bold">
+                            <a href="#" class="text-secondary">
                                 <li>Donate</li>
                             </a>
-                            <a href="" style="color: white;">
+                            <a href="" class="text-secondary">
                                 <li>Volunteer</li>
                             </a>
-                            <a href="" style="color: white;">
+                            <a href="" class="text-secondary">
                                 <li>News</li>
                             </a>
-                            <a href="" style="color: white;">
+                            <a href="" class="text-secondary">
                                 <li>Videos</li>
                             </a>
                         </ul>
                     </div>
-                    <div class="col-lg-8 font-weight-bold">
-                        <p style="color: white;">Everyone Can Vote for OHA</p>
+                    <div class="col-lg-6 col-md-6 font-weight-bold text-center">
+                        <p class="text-secondary">Everyone Can Vote for OHA</p>
                         <iframe title="vimeo-player" src="https://player.vimeo.com/video/189825717" width="300"
                             height="160" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-2 ">
-                        <p class="font-weight-bold" style="color: white;">Social</p>
-                        <a href="https://www.facebook.com/AkinaForOHA/"><i class="fab fa-facebook fa-2x"
-                                style="color: white;"></i></a>
-                        <i class="fas fa-envelope fa-2x ml-2" data-toggle="tooltip" title="Kelii@keliiAKINA.com"
-                            style="color: white;"></i>
+                    <div class="col-lg-3 col-md-3 text-right">
+                        <p class="font-weight-bold text-secondary">Social</p>
+                        <div>
+                            <a class="small" href="https://www.facebook.com/AkinaForOHA/">
+                                <i class="fab fa-facebook fa-2x text-secondary"></i>
+                            </a>
+                            <a href="#" class="small text-secondary">
+
+                                <i class="fas fa-envelope fa-2x ml-2" data-toggle="tooltip" title="Kelii@keliiAKINA.com"></i>
+
+                            </a>
+                        </div>
                     </div>
                 </div>
         </footer>
