--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             h1 {
                 font-size: 1.5rem;
             }
+
             #myVideo {
                 display: none;
             }
+
             #logo-banner {
                 width: 100%;
                 height: 50vh;
@@ -81,6 +83,10 @@
             .img {
                 height: 200px;
             }
+        }
+
+        .text-primary {
+            color: #0e2e56 !important;
         }
 
         .btn-outline-primary {
@@ -154,6 +160,74 @@
             z-index: 2;
         }
 
+        .akina-slideshow span {
+            width: 100%;
+            height: 100vh;
+            left: 2%;
+            position: absolute;
+            color: transparent;
+            background-size: cover;
+            background-position: 50% 50%;
+            background-repeat: none;
+            opacity: 0;
+            z-index: 0;
+            animation: imageAnimation 36s linear infinite 0s;
+        }
+
+        .akina-slideshow span:nth-child(1) {
+            background-image: url("img/akina4.png");
+        }
+
+        .akina-slideshow span:nth-child(2) {
+            background-image: url("img/radio2.png");
+            -webkit-animation-delay: 6s;
+            -moz-animation-delay: 6s;
+            -o-animation-delay: 6s;
+            -ms-animation-delay: 6s;
+            animation-delay: 6s;
+        }
+
+        .akina-slideshow span:nth-child(3) {
+            background-image: url("img/akina4.png");
+            -webkit-animation-delay: 12s;
+            -moz-animation-delay: 12s;
+            -o-animation-delay: 12s;
+            -ms-animation-delay: 12s;
+            animation-delay: 12s;
+        }
+
+        .akina-slideshow span:nth-child(4) {
+            background-image: url("img/radio2.png");
+            -webkit-animation-delay: 18s;
+            -moz-animation-delay: 18s;
+            -o-animation-delay: 18s;
+            -ms-animation-delay: 18s;
+            animation-delay: 18s;
+        }
+
+        .akina-slideshow span:nth-child(5) {
+            background-image: url("img/akina4.png");
+            -webkit-animation-delay: 24s;
+            -moz-animation-delay: 24s;
+            -o-animation-delay: 24s;
+            -ms-animation-delay: 24s;
+            animation-delay: 24s;
+        }
+
+        .akina-slideshow span:nth-child(6) {
+            background-image: url("img/radio2.png");
+            -webkit-animation-delay: 30s;
+            -moz-animation-delay: 30s;
+            -o-animation-delay: 30s;
+            -ms-animation-delay: 30s;
+            animation-delay: 30s;
+        }
+
+        .biography {
+            margin: 2% 0%;
+            height: 100vh;
+        }
+
         /* .swiper-wrapper {
             height: auto !important;
         } */
@@ -173,6 +247,30 @@
 
         #readMore:hover {
             cursor: pointer;
+        }
+
+        @keyframes imageAnimation {
+            0% {
+                opacity: 0;
+                animation-timing-function: ease-in;
+            }
+
+            8% {
+                opacity: 1;
+                animation-timing-function: ease-out;
+            }
+
+            17% {
+                opacity: 1
+            }
+
+            25% {
+                opacity: 0
+            }
+
+            100% {
+                opacity: 0
+            }
         }
 
         @keyframes bounce {
@@ -330,13 +428,46 @@
         <video class="lazy" autoplay muted loop id="myVideo" data-poster="img/poster.png">
             <source data-src="img/For Web-1.webm" type="video/mp4">
         </video>
-        
+
         <!-- For mobile -->
         <div id="logo-banner"></div>
     </div>
 
+    <div class="row biography" id="content1">
+        <div class="col col-lg-6">
+            <div class="akina-slideshow">
+                <span>Image 1</span>
+                <span>Image 1</span>
+                <span>Image 1</span>
+                <span>Image 1</span>
+                <span>Image 1</span>
+                <span>Image 1</span>
+            </div>
+        </div>
+        <div class="col col-lg-6">
+            <h1 class="text-center text-primary">What's Great About Akina?</h1>
+            <p class="mt-5 mx-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque ipsum a leo molestie
+                vehicula. Aenean velit dui, ornare tempor nulla non, mollis facilisis ante. Sed varius mauris ut iaculis
+                ornare. Duis venenatis purus faucibus, aliquet purus et, dapibus felis. Curabitur a tortor facilisis,
+                consequat nulla quis, posuere dolor. Cras imperdiet mollis est, sed tincidunt leo facilisis sit amet.
+                Vestibulum at molestie lacus. Vestibulum sed dolor pretium neque pulvinar vestibulum. Aliquam eget ipsum
+                quis sem condimentum laoreet. Nulla a lacus at lectus porttitor bibendum sit amet eu tortor. Integer
+                eleifend libero a enim pulvinar mollis. Vestibulum in risus commodo, placerat nulla vel, lobortis eros.
+                Morbi iaculis pulvinar felis, in sagittis purus interdum eget. Quisque sit amet porta justo.
 
-    <div class="swiper-container" id="content1">
+                Nam porttitor sem est, a condimentum ex feugiat ac. Duis sem arcu, gravida et quam et, ultrices
+                dignissim mi. Nunc ornare velit sit amet lectus dictum, sit amet porttitor leo vestibulum. Etiam ac
+                risus eros. Maecenas pharetra laoreet tincidunt. Fusce sit amet iaculis risus, nec bibendum velit. Sed
+                luctus tincidunt diam, ac tincidunt nulla sodales vel. Nulla consectetur est vitae efficitur egestas.
+            </p>
+            <button class="btn btn-outline-primary float-right mt-5 mr-5">
+                Read More
+            </button>
+        </div>
+    </div>
+
+    <div class="swiper-container">
         <button class="btn btn-lg btn-outline-light " id="prev"><i class="fas fa-chevron-left"></i></button>
         <button class="btn btn-lg btn-outline-light " id="next"><i class="fas fa-chevron-right"></i></button>
         <div class="swiper-wrapper text-white">
@@ -372,7 +503,8 @@
                 </div>
                 <div class="card-body bg-primary">
                     <h1>A graduate of :</h1>
-                    <p class="lead">Kamehameha Schools, Northwestern University (B.A.) and University of Hawaii (M.A. and Ph.D.)</p>
+                    <p class="lead">Kamehameha Schools, Northwestern University (B.A.) and University of Hawaii (M.A.
+                        and Ph.D.)</p>
                 </div>
             </div>
             <div class="card bg-secondary border-0 swiper-slide">
@@ -443,7 +575,8 @@
                             </a>
                             <a href="#" class="small text-secondary">
 
-                                <i class="fas fa-envelope fa-2x ml-2" data-toggle="tooltip" title="Kelii@keliiAKINA.com"></i>
+                                <i class="fas fa-envelope fa-2x ml-2" data-toggle="tooltip"
+                                    title="Kelii@keliiAKINA.com"></i>
 
                             </a>
                         </div>
