--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="col-12 col-lg-6">
                 <div class="p-4">
                     <h1 class="text-center text-primary">What's Great About Akina?</h1>
-                    <p class="mt-4 text-center">
+                    <p class="mt-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque ipsum a leo molestie
                         vehicula. Aenean velit dui, ornare tempor nulla non, mollis facilisis ante. Sed varius mauris ut iaculis
                         ornare. Duis venenatis purus faucibus, aliquet purus et, dapibus felis. Curabitur a tortor facilisis,
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-primary">
-                    <h1>President/CEO of Grassroot Institute of Hawaii</h1>
+                    <h3>President/CEO of Grassroot Institute of Hawaii</h3>
                     <p class="lead">A public policy research institution dedicated to the principles of individual
                         liberty, free markets and limited, accountable government. </p>
                 </div>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-secondary">
-                    <h1>Trustee-at-Large in the Office of Hawaiian Affairs</h1>
+                    <h3>Trustee-at-Large in the Office of Hawaiian Affairs</h3>
                     <p class="lead">A statewide elective position for which he garnered 164,000 votes in the 2016
                         election</p>
                 </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-primary">
-                    <h1>A graduate of :</h1>
+                    <h3>A graduate of :</h3>
                     <p class="lead">Kamehameha Schools, Northwestern University (B.A.) and University of Hawaii (M.A.
                         and Ph.D.)</p>
                 </div>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-secondary">
-                    <h1>A member of the Pacific Century Fellows</h1>
+                    <h3>A member of the Pacific Century Fellows</h3>
                     <p class="lead">An offshoot of the White House Fellows program</p>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-primary">
-                    <h1> An expert in East-West philosophy and ethics</h1>
+                    <h3> An expert in East-West philosophy and ethics</h3>
                     <p class="lead"></p>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="card-body bg-secondary">
-                    <h1>An adjunct instructor at Hawaii Pacific University.</h1>
+                    <h3>An adjunct instructor at Hawaii Pacific University.</h3>
                     <p class="lead">Dr. Akina has lectured at universities in China and the United States</p>
                 </div>
             </div>
@@ -215,7 +215,7 @@
         <footer id="sticky-footer" class="py-4 bg-black text-white-50 ">
             <div class="container">
                 <div class="row mt-4">
-                    <div class="col-lg-3 col-md-3">
+                    <div class="col-6 col-lg-3 col-md-3">
                         <ul class="list-unstyled font-weight-bold">
                             <a href="#" class="text-secondary">
                                 <li>Donate</li>
@@ -231,12 +231,12 @@
                             </a>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-6 font-weight-bold text-center">
+                    <div class="col-lg-6 col-md-6 font-weight-bold text-center d-none d-md-block">
                         <p class="text-secondary">Everyone Can Vote for OHA</p>
                         <iframe title="vimeo-player" src="https://player.vimeo.com/video/189825717" width="300"
                             height="160" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-3 col-md-3 text-right">
+                    <div class="col-6 col-lg-3 col-md-3 text-right">
                         <p class="font-weight-bold text-secondary">Social</p>
                         <div>
                             <a class="small" href="https://www.facebook.com/AkinaForOHA/">
