--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <!-- LANDING PAGE NAV -->
-    <nav class="navbar navbar-expand-lg navbar-light d-none d-md-block" style="background-color: rgba(0,0,0,0)" id="lp-nav">
+    <nav class="navbar navbar-expand-lg navbar-light d-none d-md-block" style="background-color: rgba(0,0,0,0)"
+        id="lp-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -81,7 +82,7 @@
     </nav>
 
     <div id="banner" style="position:relative;">
-        
+
         <!-- The video -->
         <video class="lazy" autoplay muted loop id="myVideo" data-poster="img/poster.png">
             <source data-src="img/For Web-1.webm" type="video/mp4">
@@ -113,19 +114,22 @@
                 <div class="p-4">
                     <h1 class="text-center text-primary">What's Great About Akina?</h1>
                     <p class="mt-4">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque ipsum a leo molestie
-                        vehicula. Aenean velit dui, ornare tempor nulla non, mollis facilisis ante. Sed varius mauris ut iaculis
-                        ornare. Duis venenatis purus faucibus, aliquet purus et, dapibus felis. Curabitur a tortor facilisis,
-                        consequat nulla quis, posuere dolor. Cras imperdiet mollis est, sed tincidunt leo facilisis sit amet.
-                        Vestibulum at molestie lacus. Vestibulum sed dolor pretium neque pulvinar vestibulum. Aliquam eget ipsum
-                        quis sem condimentum laoreet. Nulla a lacus at lectus porttitor bibendum sit amet eu tortor. Integer
-                        eleifend libero a enim pulvinar mollis. Vestibulum in risus commodo, placerat nulla vel, lobortis eros.
-                        Morbi iaculis pulvinar felis, in sagittis purus interdum eget. Quisque sit amet porta justo.
-        
-                        Nam porttitor sem est, a condimentum ex feugiat ac. Duis sem arcu, gravida et quam et, ultrices
-                        dignissim mi. Nunc ornare velit sit amet lectus dictum, sit amet porttitor leo vestibulum. Etiam ac
-                        risus eros. Maecenas pharetra laoreet tincidunt. Fusce sit amet iaculis risus, nec bibendum velit. Sed
-                        luctus tincidunt diam, ac tincidunt nulla sodales vel. Nulla consectetur est vitae efficitur egestas.
+                        <strong>Keliʻi Akina, Ph.D.</strong>, is a leader who is transforming Hawaii's economy, government and society.
+                        He is known for the phrase he coined, "E Hana Kākou" - Let's work together! Over the past
+                        several years as a public policy adviser at the legislative, congressional and international
+                        levels, Dr. Akina has become a leading defender of the Aloha Spirit. His mission is to preserve
+                        the Aloha Spirit by which Hawaiians and people of all races are welcomed and encouraged to work
+                        together for a better future. As a Native Hawaiian and skilled chanter, Dr. Akina has dedicated
+                        his life to the education and financial advancement of both Hawaiians and all people in the
+                        islands, starting in the 1980's as the director of Youth for Christ on the Wai`anae and Nanakuli
+                        coast. His plans for Hawaii's economy and future are based on the conviction that the only way
+                        to raise the water level of one boat is to raise the water level of all boats. This conviction
+                        drives Dr. Akina to create solutions to Hawaii's problems that benefit everyone, now and into
+                        the future. A recent victory for the Aloha Spirit is Dr. Akina's legal case, "Akina v. the State
+                        of Hawaii, OHA, Na'i Aupuni, et al" in which the United States Supreme Court stopped the State
+                        of Hawaii from conducting a racially discriminatory election. Dr. Akina believes that "It's time
+                        to reform OHA" so that it becomes a driving force in preserving the Aloha Spirit and advancing
+                        Hawaiians through housing, education, healthcare, and economic prosperity.
                     </p>
                     <button class="btn btn-outline-primary float-right m-4">
                         Read More
@@ -294,7 +298,7 @@
                 el: '.swiper-pagination',
             }
         });
-        setInterval(function() {
+        setInterval(function () {
             swiper.slideNext();
         }, 2500)
 
